--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primereact": "^10.8.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
