--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.6",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
     "coffco": "file:",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.2.12",
     "jwt-decode": "^4.0.0",
+    "mui-datatables": "^4.3.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.0",
     "react": "^18.2.0",
