--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.7",
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.5",
     "coffco": "file:",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.2.12",
@@ -37,7 +38,8 @@
     "react-router-dom": "^6.23.1",
     "react-social-icons": "^6.16.0",
     "react-toastify": "^10.0.5",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
