--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.17.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
@@ -29,7 +30,6 @@
     "react-big-calendar": "^1.13.3",
     "react-burger-menu": "^3.0.9",
     "react-confirm-alert": "^3.0.6",
-    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
