--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.23.1",
     "react-social-icons": "^6.16.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.12"
   },
