--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.7.5",
     "coffco": "file:",
     "dayjs": "^1.11.12",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.2.12",
     "jwt-decode": "^4.0.0",
     "mui-datatables": "^4.3.0",
