--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.2.12",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "mui-datatables": "^4.3.0",
     "primeicons": "^7.0.0",
