--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.12",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.2.12",
     "i18next": "^23.15.1",
     "js-cookie": "^3.0.5",
