--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@nextui-org/react": "^2.4.2",
@@ -27,6 +30,7 @@
     "echarts-for-react": "^3.0.2",
     "exceljs": "^4.4.0",
     "framer-motion": "^11.2.12",
+    "fullcalendar": "^6.1.15",
     "i18next": "^23.15.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
