--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@nextui-org/react": "^2.4.2",
-    "@react-pdf/renderer": "^3.4.4",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.5",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.5",
     "bootstrap-icons": "^1.11.3",
